Ispravio bug gdje bi mi se prilikom zapisivanja novog kluba u datoteku ne bi obrisali izabrani slobodni članovi iz kluba "Bez kluba".
-dodao i u FileReaderUtil.java sigurnost prilikom čitanja kluba koji ne sadrži članove.